k8s/git-mirror/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: git-mirror
  labels:
    app.kubernetes.io/part-of: his-hope-gitops
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
