k8s/git-mirror/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: git-mirror
  labels:
    app.kubernetes.io/name: gitea
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitea
  ports:
    - name: http
      port: 3000
      targetPort: http
    - name: ssh
      port: 2222
      targetPort: ssh
